# flyo

./: .gitignore  Cargo.toml  README.md  run_all_tests.ps1  untitled.pen
.github/workflows/: ci.yml  docs.yml  release.yml
flyo/: Cargo.toml  README.md  build.rs  demo.ps1  test_api.ps1  test_auth.ps1  test_binary.ps1  test_concurrent.ps1  test_docs_smoke.ps1  test_smoke.ps1  webd.conf
flyo-proxy/: Cargo.toml  README.md  test_proxy.ps1
flyo-proxy/src/: config.rs  guard.rs  main.rs  tls.rs
flyo/docs/: api.html  config.html  docs.css  index.html  install.html  serve.ps1
flyo/src/: auth.rs  config.rs  fs_ops.rs  handlers.rs  main.rs  ui.rs
flyo/tools/: build_ico.py  concurrent_test.py
flyo/web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
flyo/web/src/: App.tsx  api.ts  format.ts  icons.tsx  logo.tsx  main.tsx  state.ts  strings.ts  styles.css
