[workspace]
resolver = "2"
members = ["flyo", "flyo-proxy"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# HTTP stack — shared by flyo + flyo-proxy
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "set-header"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service", "client", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
