[package]
name = "flyo-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Optional reverse proxy for flyo — HTTPS, rate limiting, IP allow/block."

[dependencies]
# Reuse the workspace HTTP stack
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# TLS — rustls keeps us pure-Rust, no system OpenSSL dependency
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"            # self-signed cert generation for first-run convenience

# CIDR matching for allow/block lists
ipnet = "2"

