[package]
name = "flyo"
version = "0.1.0"
edition = "2021"
description = "Flyo — lightweight self-hosted web file server (Rust rewrite of webd)"
license = "MIT"
publish = false

[dependencies]
# HTTP stack
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "cors", "set-header"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
bytes = "1"
futures = "0.3"
mime_guess = "2"
percent-encoding = "2"
urlencoding = "2"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embed assets at compile time
rust-embed = { version = "8", features = ["compression"] }

# Random for session tokens
rand = "0.9"

# Anyhow for ergonomic error handling at boundaries
anyhow = "1"
thiserror = "2"

# Async streaming for upload/download
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Release profile lives in the workspace root Cargo.toml — see ../Cargo.toml.
